bookinfo-mysql-ddbb/ossm/istio-system/route-bookinfo.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bookinfo-secure
  namespace: istio-system
spec:
  host: bookinfo.secure.$EXTERNAL_DOMAIN
  port:
    targetPort: https
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
  tls:
    termination: passthrough
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bookinfo
  namespace: istio-system
spec:
  host: bookinfo.$EXTERNAL_DOMAIN
  port:
    targetPort: http2
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
